# valorant-agent-stats

./: .gitignore  LICENSE  LeaderboardScraper.py  README.md  enums.py  get_heatmaps.py  heatmap.py  pyproject.toml  requirements.txt  stats.py  union_agent_stats.py
csvs/: all.csv  e2act1.csv  e2act2.csv  e2act3.csv  e3act1.csv  e3act2.csv  e3act3.csv  e4act1.csv  e4act2.csv  e4act3.csv  e5act1.csv  e5act2.csv  e6act1.csv  e6act2.csv  e6act3.csv  e7act1.csv  e7act2.csv  e7act3.csv  e8act1.csv  e8act2.csv  e8act3.csv  e9act1.csv  e9act2.csv  e9act3.csv
csvs/pick_rates/: pick_rates_e2act1.csv  pick_rates_e2act2.csv  pick_rates_e2act3.csv  pick_rates_e3act1.csv  pick_rates_e3act2.csv  pick_rates_e3act3.csv  pick_rates_e4act1.csv  pick_rates_e4act2.csv  pick_rates_e4act3.csv  pick_rates_e5act1.csv  pick_rates_e5act2.csv  pick_rates_e6act1.csv  pick_rates_e6act2.csv  pick_rates_e6act3.csv  pick_rates_e7act1.csv  pick_rates_e7act2.csv  pick_rates_e7act3.csv  pick_rates_e8act1.csv  pick_rates_e8act2.csv  pick_rates_e8act3.csv  pick_rates_e9act1.csv  pick_rates_e9act2.csv  pick_rates_e9act3.csv
ep-act-csvs/: e2act1.csv  e2act2.csv  e2act3.csv  e3act1.csv  e3act2.csv  e3act3.csv  e4act1.csv  e4act2.csv  e4act3.csv  e5act1.csv  e5act2.csv  union_all_agent_stats.csv
