[project]
name = "valorant-agent-stats"
readme = { "file" = "README.md", "content-type" = "text/markdown" }
license = { file = "LICENSE" }
version = "0.4.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = [
    "anyio==4.6.2.post1",
    "attrs==24.2.0",
    "automat==24.8.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "constantly==23.10.4",
    "cryptography==43.0.3",
    "cssselect==1.2.0",
    "defusedxml==0.7.1",
    "filelock==3.16.1",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "itemadapter==0.9.0",
    "itemloaders==1.3.2",
    "jmespath==1.0.1",
    "lxml==5.3.0",
    "more-itertools==10.5.0",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "parsel==1.9.1",
    "protego==0.3.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydispatcher==2.0.7",
    "pyopenssl==24.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "queuelib==1.7.0",
    "requests==2.32.3",
    "requests-file==2.1.0",
    "scrapy==2.11.2",
    "service-identity==24.2.0",
    "setuptools==75.5.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tldextract==5.1.3",
    "twisted==24.10.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "w3lib==2.2.1",
    "zope-interface==7.1.1",
]
